Closed Bug 986331 Opened 11 years ago Closed 11 years ago

.3g2 video clip does not enumerate in video app

Categories

(Firefox OS Graveyard :: Gaia::Video, defect, P2)

ARM
Gonk (Firefox OS)
defect

Tracking

(feature-b2g:2.0, tracking-b2g:backlog)

RESOLVED FIXED
2.0 S3 (6june)
feature-b2g 2.0
tracking-b2g backlog

People

(Reporter: poojas, Assigned: dhylands)

References

Details

(Whiteboard: [caf priority: p2][CR 628052])

Attachments

(3 files, 4 obsolete files)

Steps to reproduce: 1.Copy any .3g2 format clip( or attached test clip ) to sdcard 2.Open video app Expected behavior: The added clip should get enumerate in video app Actual behavior: Clip doesn't enumerated. Also if I change the .3g2 format to .mp4/3gp the same clip get enumerate and also played well. Is .3p2 format is not supported in FFOS. If so can we add it?
blocking-b2g: --- → 1.4?
Whiteboard: [CR 628052]
QA Wanted to check if this reproduces on 1.3. I doubt this is a regression - I've never seen this file format used in testing previously in any release.
Keywords: qawanted
QA Contact: mvaughan
This issue reproduces on the 03/20/14 1.3 build. The '3g2' format is not recognized, but when it is changed to '3gp' or 'mp4', the video will be recognized and listed in the Video app. Device: Buri v1.3 MOZ RIL BuildID: 20140320004000 Gaia: 35a51cad2b8cd63c62152bc42c242ce67f27ffea Gecko: ed31cfc75f93 Version: 28.0 Firmware Version: V1.2-device.cfg Additionally, this issue reproduces on 1.1.
Keywords: qawanted
blocking-b2g: 1.4? → 1.4+
I get the feeling that all we need to do here is add 3g2 to the list of supported types for device storage. Dave - Is that right? Blocking+ for a FC QC blocker
Flags: needinfo?(dhylands)
Russn is also investigating the fix...
assigning to russ
Assignee: nobody → rnicoletti
(In reply to Hema Koka [:hema] from comment #5) > assigning to russ Actually don't worry about this - clee just came back and clarified that this is a not a blocker. See https://bugzilla.mozilla.org/show_bug.cgi?id=986381#c7.
blocking-b2g: 1.4+ → backlog
Flags: needinfo?(dhylands)
Assignee: rnicoletti → nobody
This file determines which files are enumerated for a particular type: http://dxr.mozilla.org/mozilla-central/source/toolkit/content/devicestorage.properties
Hi Dave, Even after adding .3g2 format in http://dxr.mozilla.org/mozilla-central/source/toolkit/content/devicestorage.properties ,.3g2 video files doesn't get enumerated. Is adding format in devicestorage.properties not enough?
There is another code to prevent listing in video app. We use HTMLMediaElement.canPlayType to check it[1]. [1] https://github.com/mozilla-b2g/gaia/blob/88452273be2f912d250e661c29b5a7c1af7aa012/apps/video/js/metadata.js#L169
yeah but HTMLMediaElement.canPlayType() comes in picture after the clip gets enumerated from media db. But here the clip is not even enumerated so we are not reaching till that point yet.
I tried renaming the .3g2 to have a .3gp extension and it still failed to play. So the internal file format isn't something we already support.
Hmm my last comment was made on the flame. I'll try on a couple other devices to see if there is a flame issue somewhere
If I apply this patch, then I can successfully play the referenced .3g2 file on my nexus 4, but it fails on my flame.
Attached file Logcat showing omx errors (obsolete) —
Logcat which show OMX errors while trying to open the 3g2 file on the flame. This leads me to believe that on the flame, we're running into a vendor issue.
Thanks Dave for testing this out. Lets get this in for 2.0 and file a separate bug for tracking flame vendor issue. Thanks Hema
Assignee: nobody → dhylands
Target Milestone: --- → 2.0 S3 (6june)
Interestingly enough, when I tested on my flame today, the .3g2 video played fine (with the patch attached to this bug applied). So maybe this isn't a vendor problem after all. I'll find somebody to review the patch.
Attachment #8425850 - Flags: review?(cajbir.bugzilla)
Comment on attachment 8425850 [details] [diff] [review] Enable .3g2 extenstion as a 3gpp file. Review of attachment 8425850 [details] [diff] [review]: ----------------------------------------------------------------- Is there demand or a use case for 3g2 files? In general we are trying to limit proliferation of media formats.
Apparently, this is failing one of the codeaurora test suites. adding needinfo on Hema to comment on whether this is important or not.
Flags: needinfo?(hkoka)
Comment on attachment 8425850 [details] [diff] [review] Enable .3g2 extenstion as a 3gpp file. Removing review while waiting for feedback. Please re-request review if/when needed.
Attachment #8425850 - Flags: review?(cajbir.bugzilla)
(In reply to cajbir (:cajbir) from comment #19) > Comment on attachment 8425850 [details] [diff] [review] > Enable .3g2 extenstion as a 3gpp file. > > Removing review while waiting for feedback. Please re-request review if/when > needed. This is being requested by product folks and partner since it is a standard format for 3gpp based mobiles. Please review Dave's fix so we can get it addressed in 2.0 release
Flags: needinfo?(hkoka)
Comment on attachment 8425850 [details] [diff] [review] Enable .3g2 extenstion as a 3gpp file. Review of attachment 8425850 [details] [diff] [review]: ----------------------------------------------------------------- Do you have a test for this?
Attachment #8425850 - Flags: review+
Flags: in-testsuite?
feature-b2g: --- → 2.0
(In reply to cajbir (:cajbir) from comment #21) > Comment on attachment 8425850 [details] [diff] [review] > Enable .3g2 extenstion as a 3gpp file. > > Review of attachment 8425850 [details] [diff] [review]: > ----------------------------------------------------------------- > > Do you have a test for this? That's a very good question. I'll see if we have permission to add the attached .3g2 file to a testsuite. Where would I find our test files?
Flags: needinfo?(cajbir.bugzilla)
Pooja, is it ok for us to add the attached .3g2 file to our testsuite?
Flags: needinfo?(poojas)
(In reply to Dave Hylands [:dhylands] from comment #22) > > That's a very good question. I'll see if we have permission to add the > attached .3g2 file to a testsuite. Where would I find our test files? content/media/tests. You should be able to add the file to the manifest.js in there and it will be used in any build configuration that supports that format.
Flags: needinfo?(cajbir.bugzilla)
(In reply to Dave Hylands [:dhylands] from comment #23) > Pooja, is it ok for us to add the attached .3g2 file to our testsuite? No. This clip was shared only for MoCo internal usage and not to be redistributed.
Ok - before I can land this, I need a small (probably only needs to be 2-3 seconds) .3g2 file that I can add to our test suite.
Flags: needinfo?(mvines)
Well I'm sure the internets have one in the public domain that could be used.
Flags: needinfo?(poojas)
Flags: needinfo?(mvines)
Attachment #8425850 - Attachment is obsolete: true
Attachment #8425851 - Attachment is obsolete: true
Comment on attachment 8431899 [details] [diff] [review] Add support for video/3gpp2 and .3g2 file extension OK - this time I added the new mime type as well as the .3g2 extension, and some test files.
Attachment #8431899 - Flags: review?(cajbir.bugzilla)
Comment on attachment 8431902 [details] [diff] [review] gaia patches for adding .3g2 support Gaia changes required to support video/3gpp2 and .3g2
Attachment #8431902 - Flags: review?(johu)
I see that the M3 for the emulator failed. Which isn't surprising since the emulator doesn't support the same set of codecs as the devices. So I need to figure out how to tell if we're running under the emulator or not.
Attached patch Turn test for .3g2 and .3gp off (obsolete) — Splinter Review
After discussion with #ateam, it turns out we don't run mochitests on real phones and have no current plans to run mochitests on real phones. Since the .3gp and .3gp codecs are only supported on real phones, I've added a comment to manifest.js and commented out trying to run the real files. I verified manually that both sample.3g2 and sample.3gp play on my flame.
Attachment #8431899 - Attachment is obsolete: true
Attachment #8431899 - Flags: review?(cajbir.bugzilla)
Attachment #8432665 - Flags: review?(cajbir.bugzilla)
(In reply to Dave Hylands [:dhylands] from comment #33) > I see that the M3 for the emulator failed. Which isn't surprising since the > emulator doesn't support the same set of codecs as the devices. > > So I need to figure out how to tell if we're running under the emulator or > not. The tests should be using canPlayType to ensure that it can play the format before running the test. Is canPlayType returning wrong data for that mime type?
Try run https://tbpl.mozilla.org/?tree=Try&rev=9d4dc0af2b61 I wound up having to disable the emulator tests, since the OMX Decoder on the emulator fails. I filed bug 1019701 to look into these failures.
Attachment #8432665 - Attachment is obsolete: true
Attachment #8432665 - Flags: review?(cajbir.bugzilla)
Attachment #8433420 - Flags: review?(cajbir.bugzilla)
Blocks: 1019701
Comment on attachment 8431902 [details] [diff] [review] gaia patches for adding .3g2 support Changing to djf since john hu is away this week
Attachment #8431902 - Flags: review?(johu) → review?(dflanagan)
Comment on attachment 8431902 [details] [diff] [review] gaia patches for adding .3g2 support Review of attachment 8431902 [details] [diff] [review]: ----------------------------------------------------------------- looks good to me.
Attachment #8431902 - Flags: review?(dflanagan) → review+
Whiteboard: [CR 628052] → [caf priority: p2][CR 628052]
Attachment #8433420 - Flags: review?(cajbir.bugzilla) → review+
blocking-b2g: backlog → ---
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: