Bug 986331 - Enable .3g2 file extension to be recognized as 3gpp video. r=cajbir